# CLDE

include/: CLBLAS.h  CLDataStorage.h  CLmanager.h  CLmanagerBase.h  DEEuler.h  DERunge4.h  FakeFuncCalculator.h  ICLmanager.h  IDEOperator.h  IDEOutput.h  IFuncCalculator.h  PolynomialOperator.h  PolynomialOutput.h  PolynomialUtils.h  WienerFuncCalculator.h
src/: CLBLAS.cpp  CLmanager.cpp  CLmanagerBase.cpp  CMakeLists.txt  DEEuler.cpp  DERunge4.cpp  FakeFuncCalculator.cpp  PolynomialOperator.cpp  PolynomialOutput.cpp  PolynomialUtils.cpp  WienerFuncCalculator.cpp
src/kernels/: Daxpy.cl  WienerCalc.cl
util/: clToHeader.py
